refactor: Store per-mode scores/ranks and sort models by requested mode